# gkr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
ff-ext/: Cargo.toml
ff-ext/src/: lib.rs
gkr/: Cargo.toml
gkr-gadget/: Cargo.toml
gkr-gadget/benches/: keccak256.rs
gkr-gadget/src/: hash.rs
gkr-gadget/src/hash/: keccak.rs  keccak_f1600.rs
gkr/benches/: component.rs  sum_check.rs
gkr/src/: circuit.rs  dev.rs  lib.rs  poly.rs  sum_check.rs  test.rs  transcript.rs  util.rs
gkr/src/circuit/: dag.rs  node.rs
gkr/src/circuit/node/: fft.rs  input.rs  log_up.rs  logup.rs  vanilla.rs
gkr/src/poly/: binary.rs  dense.rs  eq.rs  repeated.rs
gkr/src/sum_check/: eq_f.rs  generic.rs  quadratic.rs
gkr/src/util/: arithmetic.rs  collection.rs  dev.rs  expression.rs  test.rs
src/: circuit.rs  lib.rs  poly.rs  sum_check.rs  transcript.rs  util.rs
src/circuit/: dag.rs  node.rs
src/circuit/node/: fft.rs  input.rs  vanilla.rs
src/etc/: fft.rs
src/gadget/: keccak_f1600.rs
src/sum_check/: generic.rs  quadratic.rs
src/util/: arithmetic.rs
