[workspace]
members = [
    "gkr",
    "gkr-gadget",
]
resolver = "2"

[workspace.dependencies]
halo2_curves = { git = "http://github.com/privacy-scaling-explorations/halo2curves", package = "halo2curves" }
rayon = "1.8.0"
itertools = "0.11.0"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
rand = "0.8.5"
